--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,84 +1,156 @@
 ---
 ---
 
-@string{aps = {American Physical Society,}}
-
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation,},
-  preview={brownian-motion.gif}
+@inproceedings{GulloLMT22ds,
+	abbr={DS},
+	author    = {Francesco Gullo and Lucio La Cava and Domenico Mandaglio and
+	Andrea Tagarelli},
+	title     = {When Correlation Clustering Meets Fairness Constraints},
+	booktitle = {International Conference on Discovery Science (DS)},
+	pages     = {302-317},
+	year      = {2022},
+	pdf = {DS22_paper.pdf},
+	code = {https://github.com/Ralyhu/globalCC},
+	keywords  = {conference}
 }
 
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics,},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers,}
+@inproceedings{FlescaMST22,
+	abbr={ICPR},
+	author    = {Sergio Flesca and Domenico Mandaglio and Francesco Scala and
+	Andrea Tagarelli},
+	title     = {Learning to Active Learn by Gradient Variation Based on Instance Importance},
+	booktitle = {Proceedings of the International Conference on Pattern Recognition (ICPR)},
+	pages     = {2224-2230},
+	year      = {2022},
+	keywords  = {conference},
+	poster = {ICPR22_poster.pdf},
+	pdf = {ICPR22_paper.pdf},
+	code = {https://github.com/Franco7Scala/exploiting_gradient},
+	selected={true}
 }
 
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein, A. and Podolsky, B. and Rosen, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.,},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
-  selected={true}
+@inproceedings{MandaglioTG21,
+	abbr={ECML-PKDD},
+	author    = {Domenico Mandaglio and
+	Andrea Tagarelli and
+	Francesco Gullo},
+	title     = {Correlation Clustering with Global Weight Bounds},
+	booktitle = {Proceedings of the European Conference on Machine Learning and Principles and Practice of Knowledge Discovery in Databases (ECML-PKDD)},
+	pages     = {1371-13815},
+	year      = {2021},
+	keywords  = {conference},
+	pdf = {ECMLPKDD21_paper.pdf},
+	poster = {ECMLPKDD21_poster.pdf},
+	slides = {ECMLPKDD21_slides.pdf},
+	code = {https://github.com/Ralyhu/globalCC},
+	selected={true}
 }
 
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik,},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
+@inproceedings{MandaglioTG20,
+	abbr={KDD},
+	author    = {Domenico Mandaglio and
+	Andrea Tagarelli and
+	Francesco Gullo},
+	title     = {In and Out: Optimizing Overall Interaction in Probabilistic Graphs
+	under Clustering Constraints},
+	booktitle = {Proceedings of the ACM SIGKDD International Conference on Knowledge Discovery and Data Mining (KDD)},
+	pages     = {1371--1381},
+	year      = {2020},
+	keywords  = {conference},
+	pdf = {KDD20_paper.pdf},
+	slides = {KDD20_slides.pdf},
+	code = {https://github.com/Ralyhu/optimize_interactions},
+	selected={true}
 }
 
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.,},
-  volume={17},
-  pages={549--560},
-  year={1905}
+@inproceedings{MandaglioT19asonam,
+	abbr={ASONAM},
+	author    = {Domenico Mandaglio and
+	Andrea Tagarelli},
+	title     = {Dynamic consensus community detection and combinatorial multi-armed
+	bandit},
+	booktitle = {Proceedings of the IEEE/ACM International Conference on Advances in Social Networks Analysis and Mining (ASONAM)},
+	pages     = {184--187},
+	year      = {2019},
+	pdf = {ASONAM19_paper.pdf},
+	slides = {ASONAM19_slides.pdf},
+	keywords  = {conference}
 }
 
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
+@inproceedings{MandaglioT19ds,
+	abbr={DS},
+	author    = {Domenico Mandaglio and
+	Andrea Tagarelli},
+	title     = {A Combinatorial Multi-Armed Bandit Based Method for Dynamic Consensus
+	Community Detection in Temporal Networks},
+	booktitle = {International Conference on Discovery Science (DS)},
+	pages     = {412--427},
+	year      = {2019},
+	pdf = {DS19_paper.pdf},
+	slides = {DS19_slides.pdf},
+	keywords  = {conference}
 }
 
-@book{przibram1967letters,
-  bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif}
+@inproceedings{MandaglioAT18,
+	abbr={PAKDD},
+	author    = {Domenico Mandaglio and
+	Alessia Amelio and
+	Andrea Tagarelli},
+	title     = {Consensus Community Detection in Multilayer Networks Using Parameter-Free
+	Graph Pruning},
+	booktitle = {Pacific-Asia Conference on Knowledge Discovery and Data Mining (PAKDD)},
+	pages     = {193--205},
+	year      = {2018},
+	keywords  = {conference},
+	pdf = {PAKDD18_paper.pdf},
+	selected={true}
+}
+
+
+
+@article{GulloMT22,
+	author    = {Francesco Gullo and Domenico Mandaglio and
+	Andrea Tagarelli},
+	title     = {A Combinatorial Multi-Armed Bandit Approach to Correlation Clustering},
+	journal = {Data Mining and Knowledge Discovery {\normalfont (\textbf{DAMI})}},
+	pages     = {\textit{Under review}},
+	year      = {2023},
+	keywords  = {journal}
+}
+
+@article{MandaglioT19ieee,
+	abbr={IEEE Access},
+	author    = {Domenico Mandaglio and
+	Andrea Tagarelli},
+	title     = {Generalized Preference Learning for Trust Network Inference},
+	journal   = {IEEE Access},
+	pages     = {174583--174596},
+	year      = {2019},
+	pdf = {IEEEAccess19_paper.pdf},
+	keywords  = {journal}
+}
+
+
+@inproceedings{MandaglioTG22,
+	abbr={SEBD},
+	author    = {Domenico Mandaglio and
+	Andrea Tagarelli and
+	Francesco Gullo},
+	title     = {Correlation Clustering: from Local to Global Constraints},
+	booktitle = {Proceedings of the 30th Italian Symposium on Advanced Database Systems (SEBD)},
+	pages     = {445--452},
+	year      = {2022},
+	pdf = {SEBD22_paper.pdf},
+	slides = {SEBD22_slides.pdf},
+	keywords  = {national-workshop}
+}
+
+
+@article{GulloMT23,
+	author    = {Francesco Gullo and Domenico Mandaglio and
+	Andrea Tagarelli},
+	title     = {Discovering Polarized Communities in Signed Networks via (Signed) Graph Neural Networks},
+	pages     = {\textit{to be submitted to International Joint Conference on Artificial Intelligence} (\textbf{IJCAI'23})},
+	year      = {2023},
+	keywords  = {working-paper}
 }
