reorganized dirs and minor updates

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -9,7 +9,7 @@
 	booktitle = {International Conference on Discovery Science (DS)},
 	pages     = {302-317},
 	year      = {2022},
-	pdf = {DS22_paper.pdf},
+	pdf = {papers/DS22_paper.pdf},
 	code = {https://github.com/Ralyhu/globalCC},
 	keywords  = {conference}
 }
@@ -23,8 +23,8 @@
 	pages     = {2224-2230},
 	year      = {2022},
 	keywords  = {conference},
-	poster = {ICPR22_poster.pdf},
-	pdf = {ICPR22_paper.pdf},
+	poster = {posters/ICPR22_poster.pdf},
+	pdf = {papers/ICPR22_paper.pdf},
 	code = {https://github.com/Franco7Scala/exploiting_gradient},
 	selected={true}
 }
@@ -39,9 +39,9 @@
 	pages     = {1371-13815},
 	year      = {2021},
 	keywords  = {conference},
-	pdf = {ECMLPKDD21_paper.pdf},
-	poster = {ECMLPKDD21_poster.pdf},
-	slides = {ECMLPKDD21_slides.pdf},
+	pdf = {papers/ECMLPKDD21_paper.pdf},
+	poster = {posters/ECMLPKDD21_poster.pdf},
+	slides = {slides/ECMLPKDD21_slides.pdf},
 	code = {https://github.com/Ralyhu/globalCC},
 	selected={true}
 }
@@ -57,8 +57,8 @@
 	pages     = {1371--1381},
 	year      = {2020},
 	keywords  = {conference},
-	pdf = {KDD20_paper.pdf},
-	slides = {KDD20_slides.pdf},
+	pdf = {papers/KDD20_paper.pdf},
+	slides = {slides/KDD20_slides.pdf},
 	code = {https://github.com/Ralyhu/optimize_interactions},
 	selected={true}
 }
@@ -72,8 +72,8 @@
 	booktitle = {Proceedings of the IEEE/ACM International Conference on Advances in Social Networks Analysis and Mining (ASONAM)},
 	pages     = {184--187},
 	year      = {2019},
-	pdf = {ASONAM19_paper.pdf},
-	slides = {ASONAM19_slides.pdf},
+	pdf = {papers/ASONAM19_paper.pdf},
+	slides = {slides/ASONAM19_slides.pdf},
 	keywords  = {conference}
 }
 
@@ -86,8 +86,8 @@
 	booktitle = {International Conference on Discovery Science (DS)},
 	pages     = {412--427},
 	year      = {2019},
-	pdf = {DS19_paper.pdf},
-	slides = {DS19_slides.pdf},
+	pdf = {papers/DS19_paper.pdf},
+	slides = {slides/DS19_slides.pdf},
 	keywords  = {conference}
 }
 
@@ -102,7 +102,7 @@
 	pages     = {193--205},
 	year      = {2018},
 	keywords  = {conference},
-	pdf = {PAKDD18_paper.pdf},
+	pdf = {papers/PAKDD18_paper.pdf},
 	selected={true}
 }
 
@@ -126,7 +126,7 @@
 	journal   = {IEEE Access},
 	pages     = {174583--174596},
 	year      = {2019},
-	pdf = {IEEEAccess19_paper.pdf},
+	pdf = {papers/IEEEAccess19_paper.pdf},
 	keywords  = {journal}
 }
 
@@ -140,7 +140,7 @@
 	booktitle = {Proceedings of the 30th Italian Symposium on Advanced Database Systems (SEBD)},
 	pages     = {445--452},
 	year      = {2022},
-	pdf = {SEBD22_paper.pdf},
-	slides = {SEBD22_slides.pdf},
+	pdf = {papers/SEBD22_paper.pdf},
+	slides = {slides/SEBD22_slides.pdf},
 	keywords  = {national-workshop}
 }
