--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,18 @@
 ---
 ---
 
+@inproceedings{GulloMT23dami,
+	abbr={DAMI},
+	author    = {Francesco Gullo and Domenico Mandaglio and
+	Andrea Tagarelli},
+	title     = {A Combinatorial Multi-Armed Bandit Approach to Correlation Clustering},
+	journal   = {Data Mining and Knowledge Discovery},
+	year      = {2023},
+	code = {https://github.com/Ralyhu/CMAB-CC},
+	keywords  = {journal}
+	selected={true}
+}
+
 @inproceedings{GulloLMT22ds,
 	abbr={DS},
 	author    = {Francesco Gullo and Lucio La Cava and Domenico Mandaglio and
