--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,18 +1,6 @@
 ---
 ---
 
-@inproceedings{GulloMT23dami,
-	abbr={DAMI},
-	author    = {Francesco Gullo and Domenico Mandaglio and
-	Andrea Tagarelli},
-	title     = {A Combinatorial Multi-Armed Bandit Approach to Correlation Clustering},
-	journal   = {Data Mining and Knowledge Discovery},
-	year      = {2023},
-	code = {https://github.com/Ralyhu/CMAB-CC},
-	keywords  = {journal}
-	selected={true}
-}
-
 @inproceedings{GulloLMT22ds,
 	abbr={DS},
 	author    = {Francesco Gullo and Lucio La Cava and Domenico Mandaglio and
@@ -121,13 +109,16 @@
 
 
 @article{GulloMT22,
+	abbr={DAMI},
 	author    = {Francesco Gullo and Domenico Mandaglio and
 	Andrea Tagarelli},
 	title     = {A Combinatorial Multi-Armed Bandit Approach to Correlation Clustering},
-	journal = {Data Mining and Knowledge Discovery {\normalfont (\textbf{DAMI})}},
-	pages     = {\textit{Under review}},
+	journal = {Data Mining and Knowledge Discovery},
+	pages     = {\textit{Accepted (to appear)}},
 	year      = {2023},
-	keywords  = {journal}
+	code = {https://github.com/Ralyhu/CMAB-CC},
+	keywords  = {journal},
+	selected = {true}
 }
 
 @article{MandaglioT19ieee,
