--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -108,12 +108,12 @@
 
 
 
-@article{GulloMT22,
+@article{GulloMT23,
 	abbr={DAMI},
 	author    = {Francesco Gullo and Domenico Mandaglio and
 	Andrea Tagarelli},
 	title     = {A Combinatorial Multi-Armed Bandit Approach to Correlation Clustering},
-	journal = {Data Mining and Knowledge Discovery},
+	journal = {Data Mining and Knowledge Discovery (DAMI)},
 	pages     = {\textit{Accepted (to appear)}},
 	year      = {2023},
 	code = {https://github.com/Ralyhu/CMAB-CC},
