--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,14 +1,60 @@
 ---
 ---
 
+
+@inproceedings{alfano2023complexity,
+	title={Complexity of verification and existence problems in epistemic argumentation framework},
+	author={Alfano, Gianvincenzo and Greco, Sergio and Mandaglio, Domenico and Parisi, Francesco and Trubitsyna, Irina},
+	booktitle={Proceedings of the European Conference on Artificial Intelligence {\normalfont (\textbf{ECAI~'23}), Krakow,
+	Poland, September 30 - October 4,}},
+	pages={77--84},
+	year={2023},
+	pdf = {papers/ECAI23_paper.pdf},
+	keywords  = {conference}
+}
+
+@inproceedings{AlfanoGMPT23,
+	author    = {Gianvincenzo Alfano and
+	Sergio Greco and
+	Domenico Mandaglio and
+	Francesco Parisi and
+	Irina Trubitsyna},
+	title     = {On the Verification and Existence Problems in Epistemic Argumentation
+	Framework},
+	booktitle = {Proceedings of the 7th Workshop on Advances in Argumentation in Artificial
+	Intelligence {\normalfont  (\textbf{AI{\^{}}3~'23})} co-located with the 22nd International
+	Conference of the Italian Association for Artificial Intelligence {\normalfont  (\textbf{AIxIA~'23})}, Rome, Italy, November 9,},
+volume       = {3546},
+year      = {2023},
+pdf = {https://ceur-ws.org/Vol-3546/paper03.pdf},
+keywords  = {national-workshop}
+}
+
+@inproceedings{FlescaMST23,
+	author    = {Sergio Flesca and
+	Domenico Mandaglio and
+	Francesco Scala and
+	Andrea Tagarelli},
+	title     = {A Meta-Active Learning Approach Exploiting Instance Importance based
+	on Learning Gradient Variation},
+	booktitle = {Proceedings of the 31th Italian Symposium on Advanced Database Systems {\normalfont  (\textbf{SEBD~'23}), Galzingano
+	Terme, Italy, July 2-5,}},
+	pages     = {535--544},
+	year      = {2023},
+	pdf = {https://ceur-ws.org/Vol-3478/paper75.pdf},
+	keywords  = {national-workshop}
+}
+
 @article{GulloMT23,
 	abbr={DAMI},
 	author    = {Francesco Gullo and Domenico Mandaglio and
 	Andrea Tagarelli},
 	title     = {A Combinatorial Multi-Armed Bandit Approach to Correlation Clustering},
 	journal = {Data Mining and Knowledge Discovery (DAMI)},
-	pages     = {\textit{Accepted (to appear)}},
+	pages={1630--1691},
 	year      = {2023},
+	pdf = {https://link.springer.com/content/pdf/10.1007/s10618-023-00937-5.pdf?pdf=button},
+	slides = {slides/ECMLPKDD23_slides.pdf},
 	code = {https://github.com/Ralyhu/CMAB-CC},
 	keywords  = {journal},
 	selected = {true}
@@ -23,6 +69,7 @@
 	pages     = {302-317},
 	year      = {2022},
 	pdf = {papers/DS22_paper.pdf},
+	slides = {slides/DS22_slides.pdf},
 	code = {https://github.com/Ralyhu/globalCC},
 	keywords  = {conference}
 }
