--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -5,8 +5,8 @@
 @inproceedings{alfano2023complexity,
 	title={Complexity of verification and existence problems in epistemic argumentation framework},
 	author={Alfano, Gianvincenzo and Greco, Sergio and Mandaglio, Domenico and Parisi, Francesco and Trubitsyna, Irina},
-	booktitle={Proceedings of the European Conference on Artificial Intelligence {\normalfont (\textbf{ECAI~'23}), Krakow,
-	Poland, September 30 - October 4,}},
+	booktitle={Proceedings of the European Conference on Artificial Intelligence (ECAI)},
+	abbr={ECAI},
 	pages={77--84},
 	year={2023},
 	pdf = {papers/ECAI23_paper.pdf},
@@ -14,6 +14,7 @@
 }
 
 @inproceedings{AlfanoGMPT23,
+	abbr={AI^3}
 	author    = {Gianvincenzo Alfano and
 	Sergio Greco and
 	Domenico Mandaglio and
@@ -22,8 +23,7 @@
 	title     = {On the Verification and Existence Problems in Epistemic Argumentation
 	Framework},
 	booktitle = {Proceedings of the 7th Workshop on Advances in Argumentation in Artificial
-	Intelligence {\normalfont  (\textbf{AI{\^{}}3~'23})} co-located with the 22nd International
-	Conference of the Italian Association for Artificial Intelligence {\normalfont  (\textbf{AIxIA~'23})}, Rome, Italy, November 9,},
+	Intelligence (AI^3)},
 volume       = {3546},
 year      = {2023},
 pdf = {https://ceur-ws.org/Vol-3546/paper03.pdf},
@@ -31,14 +31,14 @@ keywords  = {national-workshop}
 }
 
 @inproceedings{FlescaMST23,
+	abbr={SEBD},
 	author    = {Sergio Flesca and
 	Domenico Mandaglio and
 	Francesco Scala and
 	Andrea Tagarelli},
 	title     = {A Meta-Active Learning Approach Exploiting Instance Importance based
 	on Learning Gradient Variation},
-	booktitle = {Proceedings of the 31th Italian Symposium on Advanced Database Systems {\normalfont  (\textbf{SEBD~'23}), Galzingano
-	Terme, Italy, July 2-5,}},
+	booktitle = {Proceedings of the 31th Italian Symposium on Advanced Database Systems (SEBD)},
 	pages     = {535--544},
 	year      = {2023},
 	pdf = {https://ceur-ws.org/Vol-3478/paper75.pdf},
