--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -14,7 +14,7 @@
 }
 
 @inproceedings{AlfanoGMPT23,
-	abbr={AI^3}
+	abbr={AI^3},
 	author    = {Gianvincenzo Alfano and
 	Sergio Greco and
 	Domenico Mandaglio and
