--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,16 @@
 ---
 ---
 
+@inproceedings{LaCavaMT23,
+	abbr={arXiv},
+	author    = {Lucio La Cava and Domenico Mandaglio and
+	Andrea Tagarelli},
+	title     = {Polarization in Decentralized Online Social Networks},
+	booktitle = {arXiv preprint},
+	year      = {2023},
+	pdf = {https://arxiv.org/pdf/2312.05668.pdf},
+	keywords  = {preprint}
+}
 
 @inproceedings{alfano2023complexity,
 	abbr={ECAI},
