--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,14 +1,65 @@
 ---
 ---
+@article{GulloMT24,
+	abbr={MACH},
+	author    = {Francesco Gullo and Domenico Mandaglio and
+	Andrea Tagarelli},
+	title     = {Neural Discovery of Balance-aware Polarized Communities},
+	journal = {Machine Learning (MACH)},
+	pages = {\textit{Accepted (to appear)}},
+	year      = {2024},
+	pdf = {papers/MACH24_paper.pdf},
+	code = {https://github.com/Ralyhu/neural2pc},
+	keywords  = {journal},
+	selected = {true}
+}
 
-@inproceedings{LaCavaMT23,
-	abbr={arXiv},
+@inproceedings{LaCavaMT24,
+	abbr={WebSci},
 	author    = {Lucio La Cava and Domenico Mandaglio and
 	Andrea Tagarelli},
 	title     = {Polarization in Decentralized Online Social Networks},
+	booktitle = {Proceedings of the ACM Web Science Conference (WebSci)},
+	pages        = {48--52},
+	year      = {2024},
+	pdf = {https://dl.acm.org/doi/pdf/10.1145/3614419.3644013},
+	keywords  = {conference}
+}
+
+@inproceedings{ZangariMT24,
+	abbr={WWW},
+	author    = {Lorenzo Zangari and Domenico Mandaglio and
+	Andrea Tagarelli},
+	title     = {Link Prediction on Multilayer Networks through Learning of Within-Layer and Across-Layer Node-Pair Structural Features and Node Embedding Similarity},
+	booktitle = {Proceedings of the ACM Web Conference (WWW)},
+	pages={924--935},
+	year      = {2024},
+	pdf = {https://dl.acm.org/doi/pdf/10.1145/3589334.3645646},
+	poster = {posters/WWW24_poster.pdf},
+	code = {https://github.com/lorenzozangari/ML-Link},
+	keywords  = {conference}
+	selected = {true}
+}
+
+@article{FlescaMST24,
+	abbr={ESWA},
+	author    = {Sergio Flesca and Domenico Mandaglio and Francesco Scala and
+	Andrea Tagarelli},
+	title     = {A meta-active learning approach exploiting instance importance},
+	journal = {Expert Systems with Applications (ESWA)},
+	pages = {123320},
+	year      = {2024},
+	pdf = {https://pdf.sciencedirectassets.com/271506/1-s2.0-S0957417424X00032/1-s2.0-S0957417424001854/main.pdf?X-Amz-Security-Token=IQoJb3JpZ2luX2VjEM%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2FwEaCXVzLWVhc3QtMSJHMEUCIGJRqfhm5JdAjKt65mTRycFc%2FqVRLeSIQTlUY7zg3klFAiEAk%2BUCx3GIQvIZuuucCHaVIvkmueKA46m2YnDbbsOHjRkqswUIeBAFGgwwNTkwMDM1NDY4NjUiDOF2EcsifblGysC5BiqQBcDLclM3K9BhzngLTGtm9yTuQpEFgq%2Fh0S6Xiwdxvtaerv6pynHVIqmbnszm1Sr7obsbC5dnp05epZKi9%2BKFablDkKkrYHeFwq397%2BHv3YxITm03xaFXm52vUK8OaFYjZRU6CGj5%2FwA2mBsSm4HGHaqQzF%2F6%2FjXK6yI3S92u94BzZqYilpsn2MybkWfj4lsC5T3p3WUegBJkGsAXmhSkXqykLALZjS%2BQ6nLm2ZN6aqIop5Mthh2mFgDEi8NS9HPa9W6czITuzPciiLDOTX7hOg3PrWyhOYP7uB%2FSnhZUox1mMgdgCxze2XHbyt1b1TFJQFLEGOy8%2FXQzW0I4lpsphgALwEyuJJ8z%2FeTg8lNCsPo1y4CQevXWR6ezofMXW%2FT0akKO6CEYzzBgiAtyO73xeZD6ZAlqNLCbAZDTL6N19iSDsPfdflE%2FM7oSNxIARCq9e0YRmCswxVTAIkgy2o4qvkWm4r6jMwd6N%2B4i7A2Oi9lWCizKwDoj3zIyX3X1Uvv4FSmCp5ID56pGe1nSthdmsgUbSbiQKgpglpzYco6Op0dX%2BY%2FoDjoEBk5pIweOLtsY%2Ben2v21KBKERqVNAghzv5B9mDQ22cLQOZLOv9tDvgJACAqNHgb%2BCNzaY5v1kJQquBhg1UuT15Enm2zOcxowebuBNSkZ4ZdoI619hxMsU7%2F3%2BfXcUVHvTaw0Cxoq3K1edFC%2Fkg0ZASbITUIZhKUi%2FdFO5Gikx%2FWOON6SHPcenllpGPTXMWV9MdoMK1jefGzdb0ZjP7bG5aiIJFC71M9qRCzlUs0YoQmpTAiqL%2BgAz1p4%2ByCvsHooCsvp9LNYF7oL%2B97NuIauKPoCHmyWIXoxEEOS9x%2FDJmmBDsX6JwdFuiA8ZMIDJ27MGOrEB0XjXZ1b2HOihyBFmBokLE8ugHQQmHZEMgznZcCnfPbFZDOORFKbV6ug7ZcLUxUmLaDQPQJX5A05GNPH9at3k3kQSOQRtLihVqgSPAi%2FvhMbUkIoMRmBE%2FMYYptWzshomZdpG8KAkk3u1fW%2Bv%2B8iNYGeHs%2FpGTYKf9Bq1vxEqHUPxp6n4IyeGr3rD5jTLj%2BQlMofSJntwsuRYZiNj6NIyZnZ6OWnTnt2NPH6Z%2Be5QLxLD&X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Date=20240622T152649Z&X-Amz-SignedHeaders=host&X-Amz-Expires=300&X-Amz-Credential=ASIAQ3PHCVTYSUO7AHYZ%2F20240622%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Signature=aef1d0e76bbf70073c9e6a9e4843c6c3b5b45219609bb07ac070f72937c5c253&hash=148bc0127e2c15e507d49c55146da9dcd0e525f4e0f96ddaa1b8ce9431016804&host=68042c943591013ac2b2430a89b270f6af2c76d8dfd086a07176afe7c76c2c61&pii=S0957417424001854&tid=spdf-26e063b9-68e5-4905-9497-da528d910c50&sid=923c39c71289c54f176af1e85ffc0c3199f8gxrqb&type=client&tsoh=d3d3LnNjaWVuY2VkaXJlY3QuY29t&ua=0f1558565906515c5057&rr=897d42471bacbb25&cc=it},
+	keywords  = {journal}
+}
+
+@inproceedings{AlfanoGMPST24,
+	abbr={arXiv},
+	author    = {Gianvincenzo Alfano and Sergio Greco and Domenico Mandaglio and Francesco Parisi and Reza Shahbazian and Irina Trubitsyna},
+	title     = {Even-if Explanations: Formal Foundations, Priorities and Complexity},
 	booktitle = {arXiv preprint},
-	year      = {2023},
-	pdf = {https://arxiv.org/pdf/2312.05668.pdf},
+	year      = {2024},
+	pdf = {https://arxiv.org/pdf/2401.10938},
 	keywords  = {preprint}
 }
 
@@ -173,7 +224,6 @@ keywords  = {national-workshop}
 	year      = {2018},
 	keywords  = {conference},
 	pdf = {papers/PAKDD18_paper.pdf},
-	selected={true}
 }
 
 
