--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -6,7 +6,7 @@
 	Andrea Tagarelli},
 	title     = {Neural Discovery of Balance-aware Polarized Communities},
 	journal = {Machine Learning (MACH)},
-	pages = {\textit{Accepted (to appear)}},
+	pages = {Accepted (to appear)},
 	year      = {2024},
 	pdf = {papers/MACH24_paper.pdf},
 	code = {https://github.com/Ralyhu/neural2pc},
@@ -66,7 +66,7 @@
 @inproceedings{alfano2023complexity,
 	abbr={ECAI},
 	title={Complexity of verification and existence problems in epistemic argumentation framework},
-	author={Alfano, Gianvincenzo and Greco, Sergio and Mandaglio, Domenico and Parisi, Francesco and Trubitsyna, Irina},
+	author={Alfano Gianvincenzo and Greco Sergio and Mandaglio Domenico and Parisi Francesco and Trubitsyna Irina},
 	booktitle={Proceedings of the European Conference on Artificial Intelligence (ECAI)},
 	pages={77--84},
 	year={2023},
