--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,8 +2,7 @@
 ---
 @article{GulloMT24,
 	abbr={MACH},
-	author    = {Francesco Gullo and Domenico Mandaglio and
-	Andrea Tagarelli},
+	author    = {Francesco Gullo and Domenico Mandaglio and Andrea Tagarelli},
 	title     = {Neural Discovery of Balance-aware Polarized Communities},
 	journal = {Machine Learning (MACH)},
 	pages = {Accepted (to appear)},
@@ -28,8 +27,7 @@
 
 @inproceedings{ZangariMT24,
 	abbr={WWW},
-	author    = {Lorenzo Zangari and Domenico Mandaglio and
-	Andrea Tagarelli},
+	author    = {Lorenzo Zangari and Domenico Mandaglio and Andrea Tagarelli},
 	title     = {Link Prediction on Multilayer Networks through Learning of Within-Layer and Across-Layer Node-Pair Structural Features and Node Embedding Similarity},
 	booktitle = {Proceedings of the ACM Web Conference (WWW)},
 	pages={924--935},
