--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -25,7 +25,19 @@
 	keywords  = {conference}
 }
 
-
+@inproceedings{ZangariMT24,
+	abbr={WWW},
+	author    = {Lorenzo Zangari and Domenico Mandaglio and Andrea Tagarelli},
+	title     = {a},
+	booktitle = {Proceedings of the ACM Web Conference (WWW)},
+	pages={924--935},
+	year      = {2024},
+	pdf = {https://dl.acm.org/doi/pdf/10.1145/3589334.3645646},
+	poster = {posters/WWW24_poster.pdf},
+	code = {https://github.com/lorenzozangari/ML-Link},
+	keywords  = {conference}
+	selected = {true}
+}
 
 @article{FlescaMST24,
 	abbr={ESWA},
