--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -28,7 +28,7 @@
 @inproceedings{ZangariMT24,
 	abbr={WWW},
 	author    = {Lorenzo Zangari and Domenico Mandaglio and Andrea Tagarelli},
-	title     = {a},
+	title     = {Link Prediction on Multilayer Networks through Learning of Within-Layer and Across-Layer Node-Pair Structural Features and Node Embedding Similarity},
 	booktitle = {Proceedings of the ACM Web Conference (WWW)},
 	pages={924--935},
 	year      = {2024},
@@ -36,7 +36,6 @@
 	poster = {posters/WWW24_poster.pdf},
 	code = {https://github.com/lorenzozangari/ML-Link},
 	keywords  = {conference}
-	selected = {true}
 }
 
 @article{FlescaMST24,
