--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -35,7 +35,8 @@
 	pdf = {https://dl.acm.org/doi/pdf/10.1145/3589334.3645646},
 	poster = {posters/WWW24_poster.pdf},
 	code = {https://github.com/lorenzozangari/ML-Link},
-	keywords  = {conference}
+	keywords  = {conference},
+	selected={true}
 }
 
 @article{FlescaMST24,
@@ -144,7 +145,6 @@ keywords  = {national-workshop}
 	poster = {posters/ICPR22_poster.pdf},
 	pdf = {papers/ICPR22_paper.pdf},
 	code = {https://github.com/Franco7Scala/exploiting_gradient},
-	selected={true}
 }
 
 @inproceedings{MandaglioTG21,
