--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -47,7 +47,7 @@
 	journal = {Expert Systems with Applications (ESWA)},
 	pages = {123320},
 	year      = {2024},
-	pdf = {https://pdf.sciencedirectassets.com/271506/1-s2.0-S0957417424X00032/1-s2.0-S0957417424001854/main.pdf?X-Amz-Security-Token=IQoJb3JpZ2luX2VjEM%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2FwEaCXVzLWVhc3QtMSJHMEUCIGJRqfhm5JdAjKt65mTRycFc%2FqVRLeSIQTlUY7zg3klFAiEAk%2BUCx3GIQvIZuuucCHaVIvkmueKA46m2YnDbbsOHjRkqswUIeBAFGgwwNTkwMDM1NDY4NjUiDOF2EcsifblGysC5BiqQBcDLclM3K9BhzngLTGtm9yTuQpEFgq%2Fh0S6Xiwdxvtaerv6pynHVIqmbnszm1Sr7obsbC5dnp05epZKi9%2BKFablDkKkrYHeFwq397%2BHv3YxITm03xaFXm52vUK8OaFYjZRU6CGj5%2FwA2mBsSm4HGHaqQzF%2F6%2FjXK6yI3S92u94BzZqYilpsn2MybkWfj4lsC5T3p3WUegBJkGsAXmhSkXqykLALZjS%2BQ6nLm2ZN6aqIop5Mthh2mFgDEi8NS9HPa9W6czITuzPciiLDOTX7hOg3PrWyhOYP7uB%2FSnhZUox1mMgdgCxze2XHbyt1b1TFJQFLEGOy8%2FXQzW0I4lpsphgALwEyuJJ8z%2FeTg8lNCsPo1y4CQevXWR6ezofMXW%2FT0akKO6CEYzzBgiAtyO73xeZD6ZAlqNLCbAZDTL6N19iSDsPfdflE%2FM7oSNxIARCq9e0YRmCswxVTAIkgy2o4qvkWm4r6jMwd6N%2B4i7A2Oi9lWCizKwDoj3zIyX3X1Uvv4FSmCp5ID56pGe1nSthdmsgUbSbiQKgpglpzYco6Op0dX%2BY%2FoDjoEBk5pIweOLtsY%2Ben2v21KBKERqVNAghzv5B9mDQ22cLQOZLOv9tDvgJACAqNHgb%2BCNzaY5v1kJQquBhg1UuT15Enm2zOcxowebuBNSkZ4ZdoI619hxMsU7%2F3%2BfXcUVHvTaw0Cxoq3K1edFC%2Fkg0ZASbITUIZhKUi%2FdFO5Gikx%2FWOON6SHPcenllpGPTXMWV9MdoMK1jefGzdb0ZjP7bG5aiIJFC71M9qRCzlUs0YoQmpTAiqL%2BgAz1p4%2ByCvsHooCsvp9LNYF7oL%2B97NuIauKPoCHmyWIXoxEEOS9x%2FDJmmBDsX6JwdFuiA8ZMIDJ27MGOrEB0XjXZ1b2HOihyBFmBokLE8ugHQQmHZEMgznZcCnfPbFZDOORFKbV6ug7ZcLUxUmLaDQPQJX5A05GNPH9at3k3kQSOQRtLihVqgSPAi%2FvhMbUkIoMRmBE%2FMYYptWzshomZdpG8KAkk3u1fW%2Bv%2B8iNYGeHs%2FpGTYKf9Bq1vxEqHUPxp6n4IyeGr3rD5jTLj%2BQlMofSJntwsuRYZiNj6NIyZnZ6OWnTnt2NPH6Z%2Be5QLxLD&X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Date=20240622T152649Z&X-Amz-SignedHeaders=host&X-Amz-Expires=300&X-Amz-Credential=ASIAQ3PHCVTYSUO7AHYZ%2F20240622%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Signature=aef1d0e76bbf70073c9e6a9e4843c6c3b5b45219609bb07ac070f72937c5c253&hash=148bc0127e2c15e507d49c55146da9dcd0e525f4e0f96ddaa1b8ce9431016804&host=68042c943591013ac2b2430a89b270f6af2c76d8dfd086a07176afe7c76c2c61&pii=S0957417424001854&tid=spdf-26e063b9-68e5-4905-9497-da528d910c50&sid=923c39c71289c54f176af1e85ffc0c3199f8gxrqb&type=client&tsoh=d3d3LnNjaWVuY2VkaXJlY3QuY29t&ua=0f1558565906515c5057&rr=897d42471bacbb25&cc=it},
+	pdf = {https://pdf.sciencedirectassets.com/271506/1-s2.0-S0957417424X00032/1-s2.0-S0957417424001854/main.pdf?X-Amz-Security-Token=IQoJb3JpZ2luX2VjENH%2F%2F%2F%2F%2F%2F%2F%2F%2F%2FwEaCXVzLWVhc3QtMSJHMEUCIDbGh%2Bdn0eBUVGpUW6pAZ7W030uPUuH7h836tzu%2BLamEAiEA%2FbCb8pEArHV6ejUAmbrCpD4fgCIMiJC2zOrHaBT%2B3DoqswUIehAFGgwwNTkwMDM1NDY4NjUiDLkLj8KPKFIY4SYWriqQBSuEGDhPIw4UFrbmBS3GXO1h%2FP7NqINEo%2FyjC9ZCvelLStO8mFGnwit8d29EHYqZBeltq4vmk6rPggvBkBGJ8WauBCllQgkxJfvnL2oYkAn8j1h5uTTpURn6IWeMVHeeivzH0eFEacv6Ppb7SLS%2FZX04HGoUfUSFnxxFtJVngEG%2FZX3dKIAZmr8S4XMgKviref6eyYHrEkxD59iDeWDtMxRkQD19XDpBjZmTrxfJReqizGrTMHnkZoZtLt4jbhIeZyLFh%2FQHuNRGVMdqnW%2B8iOGBg60ZKgUnPnZvhFxHcQ8nOHmRXswYwNUqC9stvTn7rKxsgvDxKkyt3TzhiX6tm6%2BHC7Vp%2Fh5%2BH3Qxc1YnN1Pm5D2w3WrF7zog5lG%2BKKbehFi4Z2Et2Neyu5BYVn6qafOR9j17dXxCPMKClfPhXWVpqLW9YcmCPk3XAiX4zf2cjwRKKSaslrCGdwLEyMjMQzHgu4laOvhVoxmGPw22xEuysR6aAwuXNW0b33g8uNxyP4kxZ5FKKqI0oNCyLmKa7Mkp%2Fs40kiPsN63KC6q72BTOqPJ78XdTaB4CxrZtQIxCI3WjY8ZwyJwTVPZ%2FM7qs%2FjXQLZkovCrpjh8kQZJNkz%2FUF2%2BJ1%2F%2FFb079tOusY4H%2F6OYc30jvSnpj0NGBOqnZ8Ca8gKpVLlThIuqrYzUCd9EWkMLNdXGFhyjMxGjGTUtuJ7EHBnWhviZPu4G3Sap6Xun0%2BMC0NmQlAhhgiFuAzSV%2FnypUZD%2BDQgfkJzbdM84HZwRTGNa6eDSBNNZHyJTcQpC8HYgKU0usjnrZ6zcJMWOtoYEBK1c5gnoQ6RmFMh8kWpzkcxInZ%2BXc05UXoRM%2BMrhPmpWXSNe9vuz%2FJdG4TwLaMKf227MGOrEBYTwdKMcH9nKlta1i1BYjeBdSmU9R9FWG92fkIcCTltdxUhZigGquEFF5RehphUU1ufBI0M8GnrqGYav2Gs05nLwwg8EgZ4fSXmFJ9TclYNT%2BdCGo%2F%2FUDTjyUPb5URWmtyH2eDXpwcsB%2FldH1lPvGPX%2BIVkiTFbb4NETQw4bOWw8%2FHm4LVIW48ydufTLIBv%2FAr3HhJ0Z1L9Vk8WN%2BX%2BrO4lOKJQl9WCCpA9EvfdIhzIhH&X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Date=20240622T170222Z&X-Amz-SignedHeaders=host&X-Amz-Expires=300&X-Amz-Credential=ASIAQ3PHCVTYS6M44O25%2F20240622%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Signature=4c30ce972e245168bbbedaa4c3d01d756a6ace6074ff4a3fe1017107f78447b6&hash=55a1d9eb4519853c11179e91e872cd4a13018c2645c09a78ec9a5ad06197ad4b&host=68042c943591013ac2b2430a89b270f6af2c76d8dfd086a07176afe7c76c2c61&pii=S0957417424001854&tid=spdf-968b0822-f7e2-41ab-9472-6160fdf8eee9&sid=923c39c71289c54f176af1e85ffc0c3199f8gxrqb&type=client&tsoh=d3d3LnNjaWVuY2VkaXJlY3QuY29t&ua=0f1558565906060b5706&rr=897dce3f8f2d77ff&cc=it},
 	keywords  = {journal}
 }
 
