--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,5 +1,27 @@
 ---
 ---
+@inproceedings{AlfanoGMPST25,
+	author    = {Gianvincenzo Alfano and Sergio Greco and Domenico Mandaglio and  Francesco Parisi and Reza Shahbazian and Irina Trubitsyna},
+	title     = {Even-if Explanations: Formal Foundations, Priorities and Complexity},
+	journal = {Accepted at AAAI Conference on Artificial Intelligence (AAAI)},
+	year      = {2025},
+	pdf = {https://arxiv.org/pdf/2401.10938},
+	keywords  = {conference},
+	selected={true}
+}
+
+@article{alfano2024abstract,
+	abbr={AIJ}
+	author={Alfano, Gianvincenzo and Greco, Sergio and Mandaglio, Domenico and Parisi, Francesco and Trubitsyna, Irina},
+	title={Abstract argumentation frameworks with strong and weak constraints},
+	journal={Artificial Intelligence (AIJ)},
+	volume={336},
+	pages={104205},
+	year={2024},
+	pdf = {https://pdf.sciencedirectassets.com/271585/1-s2.0-S0004370224X00090/1-s2.0-S0004370224001413/main.pdf?X-Amz-Security-Token=IQoJb3JpZ2luX2VjECYaCXVzLWVhc3QtMSJGMEQCIC%2FZl09fNWgOzLLwwoqG0AuoHc%2BtWgmtYjfaO7Jd6SwAAiB88x%2FR9e2WTEoDZPrXaOVyivkl2pmlsEcjnGNdJXQPPyq8BQje%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F8BEAUaDDA1OTAwMzU0Njg2NSIMT23P%2BLwRI3I0cBfGKpAFXghhXpdD3DoQttJXXPvh92Vw6UpQwzHYIypdz9H7gP%2BRyLYccB7JKfmROYg%2B3HGZGbRApGHcrGRJmZwf1DvfSqL%2Bp1NXJtLKfe1Ft4S9wqsfQLwBltBOHfS7WsPJm2JoC5wp1lRJKY0V%2BtqiL4YF41NrNnoQensVXJU6D3ifLpQlOcPTs%2FnUNZ7EMEYKBIoJJ11wKpu9%2BWQj1sGiI%2BJH8rkgxpsIThzpwTLzaAzf4OLtqDGaZ2Wj39l2%2FKoio3VCKEPR49Zpt4oz%2FgbDRM0diM%2BkGS8Y3lXwBOBDNzNxa6ivTK%2BRTEvMT5X5khnTGT2eDKfGLK1SJBGdQnxdRRiRgQ85ev9frqbAeJoOVpGu%2FWyojQufo6WD86%2FTHEViXtGAyJ7lw2RLiy20dAiMpPqy%2BRkNOpgOULTxLVCBGLUsE3H0g2zWNpTBjs1Dmp%2FRyLtQ2mbfVerw0U17tmlNa7S8hMeKNLznpxf6sDRqgyTcIvEgWPvm3MB7u7lsfmd1npbMmHjy%2BiHvA%2BBBhp%2FADh8ehuwykFkpTmjukDQcd21B8S3fNyvHK9Es6j7eI7xyg7ctXln5vjIiSTWZF0TmujrWA4Aoj5P%2BsXzS0DUW8sG1R0mzHbKzBy7BIiTD9XcDIWYp%2FvJPXYmFIoCXn9ARpCb4WfLm5%2Be7dLJ%2BAglq1G2oCmjpcCiEQORLpgef%2Fc8647GDlzS641zn%2FQ8oObvwwRgkHO6%2FgzdvoI%2BSg8UK814yhArObRBDFGlGP6mm3lZgSOgCisHVt7ZpwQTYRG5xdC2JJoq49mjpL%2FcPk1VxUfstb%2BoRRNe3K5F3hZkrzGiajqSBrNOGbY2YfrLWBj4mDgKagnxQQsidS6%2Ffi378eDSj9lUw58nyugY6sgHiDlm4ZeYSk4NZrgh2pPDJ%2FlTntuaV1oL%2BSwH6%2Brehn54OIGr4%2FgLVY8HwYgw4EwBJ2jRvncTpOyA%2BSUlGpwJWdUHvfTFBzMpT47mN8MR0ZWBg1igArf%2BeZHyHlChAQ%2F2MfMeK0RuUsQoP5vq6LjMD%2Bitu6%2BD6NpbE3z2wLazWvSEoK1flGEgoiWp3s87FfP%2B5WJoRH9z2xjkyBt7PM0HvYMGPy3YsUNPxMvAhxyrNJlgS&X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Date=20241213T222653Z&X-Amz-SignedHeaders=host&X-Amz-Expires=300&X-Amz-Credential=ASIAQ3PHCVTYS3IU26PU%2F20241213%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Signature=bf99907801c601334d6958d904ec78a86b8bd8773615ff876c37c749a78af0f4&hash=c54e23c64de7609e35a36dc36ca17b792815148987d5a729920bcad7d25d5876&host=68042c943591013ac2b2430a89b270f6af2c76d8dfd086a07176afe7c76c2c61&pii=S0004370224001413&tid=spdf-6d24f273-de2a-47f3-a743-16b582d4ede7&sid=c83a7fa256c0704a2c3810684826af18a231gxrqb&type=client&tsoh=d3d3LnNjaWVuY2VkaXJlY3QuY29t&ua=13125909515d55500702&rr=8f1960dc0e10ea43&cc=it},
+	keywords  = {journal}
+}
+
 @article{GulloMT24,
 	abbr={MACH},
 	author    = {Francesco Gullo and Domenico Mandaglio and Andrea Tagarelli},
@@ -160,8 +182,7 @@ keywords  = {national-workshop}
 	pdf = {papers/ECMLPKDD21_paper.pdf},
 	poster = {posters/ECMLPKDD21_poster.pdf},
 	slides = {slides/ECMLPKDD21_slides.pdf},
-	code = {https://github.com/Ralyhu/globalCC},
-	selected={true}
+	code = {https://github.com/Ralyhu/globalCC}
 }
 
 @inproceedings{MandaglioTG20,
