--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,7 @@
 ---
 ---
 @inproceedings{AlfanoGMPST25,
+	abbr={AAAI},
 	author    = {Gianvincenzo Alfano and Sergio Greco and Domenico Mandaglio and  Francesco Parisi and Reza Shahbazian and Irina Trubitsyna},
 	title     = {Even-if Explanations: Formal Foundations, Priorities and Complexity},
 	journal = {Accepted at AAAI Conference on Artificial Intelligence (AAAI)},
@@ -11,7 +12,7 @@
 }
 
 @article{alfano2024abstract,
-	abbr={AIJ}
+	abbr={AIJ},
 	author={Alfano, Gianvincenzo and Greco, Sergio and Mandaglio, Domenico and Parisi, Francesco and Trubitsyna, Irina},
 	title={Abstract argumentation frameworks with strong and weak constraints},
 	journal={Artificial Intelligence (AIJ)},
