--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -4,7 +4,7 @@
 	abbr={AAAI},
 	author    = {Gianvincenzo Alfano and Sergio Greco and Domenico Mandaglio and  Francesco Parisi and Reza Shahbazian and Irina Trubitsyna},
 	title     = {Even-if Explanations: Formal Foundations, Priorities and Complexity},
-	journal = {Accepted at AAAI Conference on Artificial Intelligence (AAAI)},
+	booktitle = {Proceedings of the AAAI Conference on Artificial Intelligence (AAAI)},
 	year      = {2025},
 	pdf = {https://arxiv.org/pdf/2401.10938},
 	keywords  = {conference},
@@ -72,16 +72,6 @@
 	year      = {2024},
 	pdf = {https://pdf.sciencedirectassets.com/271506/1-s2.0-S0957417424X00032/1-s2.0-S0957417424001854/main.pdf?X-Amz-Security-Token=IQoJb3JpZ2luX2VjENH%2F%2F%2F%2F%2F%2F%2F%2F%2F%2FwEaCXVzLWVhc3QtMSJHMEUCIDbGh%2Bdn0eBUVGpUW6pAZ7W030uPUuH7h836tzu%2BLamEAiEA%2FbCb8pEArHV6ejUAmbrCpD4fgCIMiJC2zOrHaBT%2B3DoqswUIehAFGgwwNTkwMDM1NDY4NjUiDLkLj8KPKFIY4SYWriqQBSuEGDhPIw4UFrbmBS3GXO1h%2FP7NqINEo%2FyjC9ZCvelLStO8mFGnwit8d29EHYqZBeltq4vmk6rPggvBkBGJ8WauBCllQgkxJfvnL2oYkAn8j1h5uTTpURn6IWeMVHeeivzH0eFEacv6Ppb7SLS%2FZX04HGoUfUSFnxxFtJVngEG%2FZX3dKIAZmr8S4XMgKviref6eyYHrEkxD59iDeWDtMxRkQD19XDpBjZmTrxfJReqizGrTMHnkZoZtLt4jbhIeZyLFh%2FQHuNRGVMdqnW%2B8iOGBg60ZKgUnPnZvhFxHcQ8nOHmRXswYwNUqC9stvTn7rKxsgvDxKkyt3TzhiX6tm6%2BHC7Vp%2Fh5%2BH3Qxc1YnN1Pm5D2w3WrF7zog5lG%2BKKbehFi4Z2Et2Neyu5BYVn6qafOR9j17dXxCPMKClfPhXWVpqLW9YcmCPk3XAiX4zf2cjwRKKSaslrCGdwLEyMjMQzHgu4laOvhVoxmGPw22xEuysR6aAwuXNW0b33g8uNxyP4kxZ5FKKqI0oNCyLmKa7Mkp%2Fs40kiPsN63KC6q72BTOqPJ78XdTaB4CxrZtQIxCI3WjY8ZwyJwTVPZ%2FM7qs%2FjXQLZkovCrpjh8kQZJNkz%2FUF2%2BJ1%2F%2FFb079tOusY4H%2F6OYc30jvSnpj0NGBOqnZ8Ca8gKpVLlThIuqrYzUCd9EWkMLNdXGFhyjMxGjGTUtuJ7EHBnWhviZPu4G3Sap6Xun0%2BMC0NmQlAhhgiFuAzSV%2FnypUZD%2BDQgfkJzbdM84HZwRTGNa6eDSBNNZHyJTcQpC8HYgKU0usjnrZ6zcJMWOtoYEBK1c5gnoQ6RmFMh8kWpzkcxInZ%2BXc05UXoRM%2BMrhPmpWXSNe9vuz%2FJdG4TwLaMKf227MGOrEBYTwdKMcH9nKlta1i1BYjeBdSmU9R9FWG92fkIcCTltdxUhZigGquEFF5RehphUU1ufBI0M8GnrqGYav2Gs05nLwwg8EgZ4fSXmFJ9TclYNT%2BdCGo%2F%2FUDTjyUPb5URWmtyH2eDXpwcsB%2FldH1lPvGPX%2BIVkiTFbb4NETQw4bOWw8%2FHm4LVIW48ydufTLIBv%2FAr3HhJ0Z1L9Vk8WN%2BX%2BrO4lOKJQl9WCCpA9EvfdIhzIhH&X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Date=20240622T170222Z&X-Amz-SignedHeaders=host&X-Amz-Expires=300&X-Amz-Credential=ASIAQ3PHCVTYS6M44O25%2F20240622%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Signature=4c30ce972e245168bbbedaa4c3d01d756a6ace6074ff4a3fe1017107f78447b6&hash=55a1d9eb4519853c11179e91e872cd4a13018c2645c09a78ec9a5ad06197ad4b&host=68042c943591013ac2b2430a89b270f6af2c76d8dfd086a07176afe7c76c2c61&pii=S0957417424001854&tid=spdf-968b0822-f7e2-41ab-9472-6160fdf8eee9&sid=923c39c71289c54f176af1e85ffc0c3199f8gxrqb&type=client&tsoh=d3d3LnNjaWVuY2VkaXJlY3QuY29t&ua=0f1558565906060b5706&rr=897dce3f8f2d77ff&cc=it},
 	keywords  = {journal}
-}
-
-@inproceedings{AlfanoGMPST24,
-	abbr={arXiv},
-	author    = {Gianvincenzo Alfano and Sergio Greco and Domenico Mandaglio and Francesco Parisi and Reza Shahbazian and Irina Trubitsyna},
-	title     = {Even-if Explanations: Formal Foundations, Priorities and Complexity},
-	booktitle = {arXiv preprint},
-	year      = {2024},
-	pdf = {https://arxiv.org/pdf/2401.10938},
-	keywords  = {preprint}
 }
 
 @inproceedings{alfano2023complexity,
