--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,12 +1,33 @@
 ---
 ---
+@article{alfano2025decentralized,
+	abbr={KBS},
+	author={Alfano, Gianvincenzo and Greco, Sergio and Mandaglio, Domenico and Parisi, Francesco and Shahbazian, Reza and Trubitsyna, Irina},
+	title={Decentralized federated learning meets Physics-Informed Neural Networks},
+	journal={Knowledge-Based Systems (KBS)},
+	year={2025},
+	pdf = {https://www.sciencedirect.com/science/article/abs/pii/S0950705125007634},
+	keywords  = {journal}
+}
+
+@inproceedings{LaCavaMZT25,
+	author    = {Lucio La Cava and Lorenzo Zangari and Domenico Mandaglio and
+	Andrea Tagarelli},
+	title     = {Heuristic-Informed Mixture of Experts for Link Prediction in Multilayer Networks},
+	booktitle = {arXiv},
+	year      = {2025},
+	pdf = {https://arxiv.org/pdf/2501.17557},
+	keywords  = {conference}
+}
+
 @inproceedings{AlfanoGMPST25,
 	abbr={AAAI},
 	author    = {Gianvincenzo Alfano and Sergio Greco and Domenico Mandaglio and  Francesco Parisi and Reza Shahbazian and Irina Trubitsyna},
 	title     = {Even-if Explanations: Formal Foundations, Priorities and Complexity},
 	booktitle = {Proceedings of the AAAI Conference on Artificial Intelligence (AAAI)},
 	year      = {2025},
-	pdf = {https://arxiv.org/pdf/2401.10938},
+	pdf = {https://ojs.aaai.org/index.php/AAAI/article/view/33684},
+	poster = {posters/AAAI25_poster.pdf},
 	keywords  = {conference},
 	selected={true}
 }
