--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -11,6 +11,7 @@
 }
 
 @inproceedings{LaCavaMZT25,
+	abbr={arXiv},
 	author    = {Lucio La Cava and Lorenzo Zangari and Domenico Mandaglio and
 	Andrea Tagarelli},
 	title     = {Heuristic-Informed Mixture of Experts for Link Prediction in Multilayer Networks},
