--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -14,7 +14,7 @@
 	abbr={arXiv},
 	author    = {Lucio La Cava and Lorenzo Zangari and Domenico Mandaglio and
 	Andrea Tagarelli},
-	title     = {Heuristic-Informed Mixture of Experts for Link Prediction in Multilayer Networks},
+	title     = {Heuristic-Informed Mixture of Experts for Link Prediction in Multilayer Network},
 	booktitle = {arXiv},
 	year      = {2025},
 	pdf = {https://arxiv.org/pdf/2501.17557},
