--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,5 +1,101 @@
 ---
 ---
+
+@inproceedings{AlfanoGMPT26,
+	abbr={AAAI},
+	author    = {Gianvincenzo Alfano and Sergio Greco and Domenico Mandaglio and  Francesco Parisi and Irina Trubitsyna},
+	title     = {Conditional Probabilistic Bipolar Argumentation Framework: Explanations, Complexity and Approximation},
+	booktitle = {Proceedings of the AAAI Conference on Artificial Intelligence (AAAI)},
+	year      = {2026},
+	poster = {posters/AAAI26_poster.pdf},
+	keywords  = {conference},
+}
+
+@article{GulloMT26,
+	abbr={TKDD},
+	author    = {Francesco Gullo and Domenico Mandaglio and
+	Andrea Tagarelli},
+	title     = {Polarized Communities Meet Densest Subgraph: Efficient and Effective Polarization Detection in Signed Networks},
+	journal={ACM Transactions on Knowledge Discovery from Data},
+	year      = {2026},
+	pdf = {https://dl.acm.org/doi/10.1145/3779064},
+	slides = {slides/SIGKDDSingapore26_slides.pdf},
+	poster = {posters/SIGKDDSingapore2026_poster.pdf},
+	keywords  = {journal}
+}
+
+@article{LaCavaMZT26,
+	abbr={Inf. Sci.},
+	author    = {Lucio La Cava and Lorenzo Zangari and Domenico Mandaglio and
+	Andrea Tagarelli},
+	title     = {Heuristic-Informed Mixture of Experts for Link Prediction in Multilayer Networks},
+	journal={Information Sciences},
+	year      = {2026},
+	pdf = {https://www.sciencedirect.com/science/article/pii/S002002552600037X?via%3Dihub},
+	keywords  = {journal}
+}
+
+@article{FlescaMS25,
+	abbr={Array},
+	author={Sergio Flesca and
+	Domenico Mandaglio and
+	Francesco Scala},
+	title={Enhancing active learning through latent space exploration: A k-nearest
+	neighbors approach},
+	journal={Array},
+	year={2025},
+	pdf = {https://www.sciencedirect.com/science/article/pii/S2590005625002115?via%3Dihub},
+	keywords  = {journal}
+}
+
+@inproceedings{LaCavaMT25,
+	abbr={SAI4OID},
+	author    = {Lucio La Cava and Domenico Mandaglio and
+	Andrea Tagarelli},
+	title     = {Polarized Communities in Mastodon: Insights from Instance-Level Analysis},
+	booktitle = {Proceedings of the 1st International Workshop on Sustainable Artificial Intelligence for addressing Online Information Disorder (SAI4OID)},
+	year      = {2025},
+	pdf = {papers/SAI4OID25.pdf},
+	slides = {slides/SAI4OID25_slides.pdf},
+	keywords  = {national-workshop}
+}
+
+@inproceedings{GulloLMT25,
+	abbr={Green-Aware AI},
+	author    = {Francesco Gullo and Lucio La Cava and Domenico Mandaglio and
+	Andrea Tagarelli},
+	title     = {Correlation Clustering with Fairness Constraints},
+	booktitle = {Proceedings of the 2nd Workshop on Green-Aware Artificial Intelligence (Green-Aware AI)},
+	year      = {2025},
+	pdf = {papers/Green-AwareAI25.pdf},
+	slides = {slides/GreenAI25_slides.pdf},
+	code = {https://github.com/Ralyhu/globalCC},
+	keywords  = {national-workshop}
+}
+
+@inproceedings{AlfanoGMPST25-ItalIA,
+	abbr={Ital-IA},
+	author    = {Gianvincenzo Alfano and Sergio Greco and Domenico Mandaglio and  Francesco Parisi and Reza Shahbazian and Irina Trubitsyna},
+	title     = {Theoretical basis and computational complexity of semifactual explanations},
+	booktitle = {National Conference on Artificial Intelligence (Ital-IA)},
+	year      = {2025},
+	pdf = {https://ceur-ws.org/Vol-4121/Ital-IA_2025_paper_105.pdf},
+	slides = {slides/Ital-IA25_slides.pdf},
+	keywords  = {national-workshop},
+}
+
+@inproceedings{GulloMTG25,
+	abbr={SEBD},
+	author    = {Francesco Gullo and Domenico Mandaglio and
+	Andrea Tagarelli},
+	title     = {Discovering Balance-Aware Polarized Communities in Signed Networks with Graph Neural Networks},
+	booktitle = {Proceedings of the 33th Italian Symposium on Advanced Database Systems (SEBD)},
+	year      = {2025},
+	pdf = {papers/SEBD25_paper.pdf},
+	slides = {slides/SEBD25_slides.pdf},
+	keywords  = {national-workshop}
+}
+
 @article{alfano2025decentralized,
 	abbr={KBS},
 	author={Alfano, Gianvincenzo and Greco, Sergio and Mandaglio, Domenico and Parisi, Francesco and Shahbazian, Reza and Trubitsyna, Irina},
@@ -8,17 +104,6 @@
 	year={2025},
 	pdf = {https://www.sciencedirect.com/science/article/abs/pii/S0950705125007634},
 	keywords  = {journal}
-}
-
-@inproceedings{LaCavaMZT25,
-	abbr={arXiv},
-	author    = {Lucio La Cava and Lorenzo Zangari and Domenico Mandaglio and
-	Andrea Tagarelli},
-	title     = {Heuristic-Informed Mixture of Experts for Link Prediction in Multilayer Networks},
-	booktitle = {arXiv},
-	year      = {2025},
-	pdf = {https://arxiv.org/pdf/2501.17557},
-	keywords  = {conference}
 }
 
 @inproceedings{AlfanoGMPST25,
@@ -67,6 +152,7 @@
 	pages        = {48--52},
 	year      = {2024},
 	pdf = {https://dl.acm.org/doi/pdf/10.1145/3614419.3644013},
+	slides = {slides/WebSci24_slides.pdf},
 	keywords  = {conference}
 }
 
