--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -21,7 +21,8 @@
 	pdf = {https://dl.acm.org/doi/10.1145/3779064},
 	slides = {slides/SIGKDDSingapore26_slides.pdf},
 	poster = {posters/SIGKDDSingapore2026_poster.pdf},
-	keywords  = {journal}
+	keywords  = {journal},
+	selected = {true}
 }
 
 @article{LaCavaMZT26,
@@ -93,6 +94,7 @@
 	year      = {2025},
 	pdf = {papers/SEBD25_paper.pdf},
 	slides = {slides/SEBD25_slides.pdf},
+	code = {https://github.com/Ralyhu/neural2pc},
 	keywords  = {national-workshop}
 }
 
@@ -298,7 +300,6 @@ keywords  = {national-workshop}
 	pdf = {papers/KDD20_paper.pdf},
 	slides = {slides/KDD20_slides.pdf},
 	code = {https://github.com/Ralyhu/optimize_interactions},
-	selected={true}
 }
 
 @inproceedings{MandaglioT19asonam,
