--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -16,11 +16,12 @@
 	author    = {Francesco Gullo and Domenico Mandaglio and
 	Andrea Tagarelli},
 	title     = {Polarized Communities Meet Densest Subgraph: Efficient and Effective Polarization Detection in Signed Networks},
-	journal={ACM Transactions on Knowledge Discovery from Data},
+	journal={ACM Transactions on Knowledge Discovery from Data (TKDD)},
 	year      = {2026},
 	pdf = {https://dl.acm.org/doi/10.1145/3779064},
 	slides = {slides/SIGKDDSingapore26_slides.pdf},
 	poster = {posters/SIGKDDSingapore2026_poster.pdf},
+	code = {https://github.com/Ralyhu/DSP-2PC},
 	keywords  = {journal},
 	selected = {true}
 }
@@ -141,6 +142,7 @@
 	year      = {2024},
 	pdf = {papers/MACH24_paper.pdf},
 	code = {https://github.com/Ralyhu/neural2pc},
+	slides = {slides/SEBD25_slides.pdf},
 	keywords  = {journal},
 	selected = {true}
 }
